virtual keyboard implemented

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -42,3 +42,9 @@
   background: rgba(255, 255, 255, 0.04);
   text-transform: uppercase;
 }
+
+@media (max-width: 768px) {
+  app-keyboard {
+    display: none;
+  }
+}
