--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,4 +14,5 @@
     {{ badInput || state === 'won' || state === 'lost' ? message : "-" }}
   </div>
   <app-board></app-board>
+  <app-keyboard style="margin-top: 3rem;"></app-keyboard>
 </div>
