--- a/src/app/components/keyboard/keyboard.component.html
+++ b/src/app/components/keyboard/keyboard.component.html
@@ -34,7 +34,7 @@
       </div>
     </span>
     <span>
-      <div (click)="onKeyClick('enter')" class="key">enter</div>
+      <div (click)="onKeyClick('enter')" class="key" style="width: 5em;">enter</div>
     </span>
   </div>
 </div>
